--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "yarn run build",
-    "start": "node .",
+    "start": "node -r dotenv/config .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
     "@types/serve-index": "^1.9.1",
+    "dotenv": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
   }
