Add audio only flag

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,8 @@ FOLDER_LOCATION=./public
 # Sub folder for downloads
 SAVE_DIRECTORY=./downloads/
 
+# Download audio only from videos
+# Requires ffmpeg
+AUDIO_ONLY=false
 
 OUTPUT_FORMAT=%(title)s-%(id)s.%(ext)s
