Fix tslint compaints

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=3000
 FOLDER_LOCATION=./public
 
 # Sub folder for downloads
-SAVE_DIRECTORY=./downloads/
+SAVE_DIRECTORY=/downloads/
 
 # Download audio only from videos
 # Requires ffmpeg
