--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "serve-index": "^1.9.1",
-    "youtube-dl-exec": "^1.2.5"
+    "youtube-dl-exec": "^1.2.5",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
     "@types/serve-index": "^1.9.1",
-    "dotenv": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
   }
