--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
   },
   "homepage": "https://github.com/brandonxchang/MediaDownloader#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "serve-index": "^1.9.1",
-    "youtube-dl-exec": "^1.2.5",
-    "dotenv": "^10.0.0"
+    "uuid": "^8.3.2",
+    "youtube-dl-exec": "^1.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
     "@types/serve-index": "^1.9.1",
+    "@types/uuid": "^8.3.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
   }
