--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "serve-index": "^1.9.1",
+    "utf8": "^3.0.0",
     "uuid": "^8.3.2",
     "youtube-dl-exec": "^1.2.5"
   },
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
     "@types/serve-index": "^1.9.1",
+    "@types/utf8": "^3.0.0",
     "@types/uuid": "^8.3.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
