--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Downloader for media files",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prebuild": "eslint src --fix",
     "build": "tsc",
-    "prestart": "yarn run build",
+    "prestart": "npm run build",
     "start": "node -r dotenv/config .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -33,7 +33,12 @@
     "@types/serve-index": "^1.9.1",
     "@types/utf8": "^3.0.0",
     "@types/uuid": "^8.3.1",
-    "tslint": "^6.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^36.1.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "typescript": "^4.4.2"
   }
 }
